# chemistry-learning-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  requirements.txt
.trellis/: .template-hashes.json
docs/: admin-only-repository.md  application-engineering-structure.md  backend-slim-architecture.md  catalog-tree-architecture.md  legacy-competition-profile.md  local_video_processing.md  online-textbook-ingestion.md  production-media-cleanup.md  production-operations.md  productionization-final-notes.md  student-product-learning-model.md  teacher-point-video-binding.md  teacher-ui-component-library.md  实验描述1.docx  实验描述2.docx
e2e/: package-lock.json  package.json  playwright.config.ts
scripts/: apply_migrations.py  bootstrap_admin.py  bootstrap_production_seed.py  bootstrap_teacher.py  build_database_seed.py  common.py  deploy_compose_stack.py  generate_experiment_catalog_seed.py  generate_point_question_bank_seed.py  import_canonical_evidence.py  import_experiment_question_bank.py  import_precomputed_textbook_rag.py  import_reviewed_curriculum.py  import_seed_to_postgres.py  index_textbook_rag_chunks.py  media_lifecycle_cleanup.py  parse_knowledge_md.py  publish_reviewed_curriculum.py  rebuild_online_textbook_projections.py  rebuild_teacher_catalog_search_index.py  rebuild_video_library_index.py  seed_demo_identities.py  seed_demo_student_assessments.py  seed_formal_experiments.py  validate_backend_architecture.py  validate_complete_seed_bootstrap.py  validate_compose_stack.py  (+7 more)
(+1162 files in other folders)
