[project]
name = "sysu-chemistry-admin"
version = "0.1.0"
description = "SYSU chemistry learning platform for students and teachers."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4",
  "fastapi",
  "httpx",
  "lxml",
  "numpy",
  "pandas",
  "openpyxl",
  "Pillow",
  "openai-agents",
  "pdfplumber",
  "pgvector",
  "psycopg[binary]",
  "pydantic",
  "python-multipart",
  "pymupdf",
  "pymupdf4llm",
  "pypdf",
  "python-pptx",
  "rapidfuzz",
  "scikit-learn",
  "sqlalchemy",
  "uvicorn",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.fastapi]
entrypoint = "server.app.app_runtime.main:app"
